crates/resources/tests/snapshots/manifest_foundation__latest_selection_errors_when_no_platform_candidate_matches.snap
---
source: crates/resources/tests/manifest_foundation.rs
expression: "select_latest_error(&manifest, &resource, &track)?"
---
NoInstallableArtifact {
    resource: "redis",
    track: "7",
    platform: "darwin-arm64",
}
