crates/resources/tests/snapshots/manifest_foundation__latest_selection_reports_manifest_resource_misses_separately.snap
---
source: crates/resources/tests/manifest_foundation.rs
assertion_line: 226
expression: "select_latest_error(&manifest, &resource, &track)?"
---
ResourceNotInManifest {
    resource: "mysql",
}
