crates/resources/tests/snapshots/manifest_foundation__latest_selection_reports_missing_tracks_separately.snap
---
source: crates/resources/tests/manifest_foundation.rs
assertion_line: 237
expression: "select_latest_error(&manifest, &resource, &track)?"
---
TrackNotFound {
    resource: "redis",
    track: "8",
}
