crates/resources/tests/snapshots/manifest_foundation__manifest_rejects_active_revoked_ambiguous_published_at_candidates.snap
---
source: crates/resources/tests/manifest_foundation.rs
expression: parse_manifest_error(&ambiguous)?
---
InvalidManifest {
    reason: "duplicate published_at candidate in resource `redis` track `7`",
}
