crates/resources/tests/snapshots/manifest_foundation__manifest_rejects_duplicate_resources_tracks_and_artifacts-2.snap
---
source: crates/resources/tests/manifest_foundation.rs
expression: parse_manifest_error(&duplicate_track)?
---
InvalidManifest {
    reason: "duplicate track `7` for resource `redis`",
}
