crates/resources/tests/snapshots/manifest_foundation__manifest_rejects_duplicate_resources_tracks_and_artifacts-4.snap
---
source: crates/resources/tests/manifest_foundation.rs
expression: parse_manifest_error(&empty_artifacts)?
---
InvalidManifest {
    reason: "resource `redis` track `7` has no artifacts",
}
