crates/resources/tests/snapshots/manifest_foundation__manifest_rejects_duplicate_resources_tracks_and_artifacts.snap
---
source: crates/resources/tests/manifest_foundation.rs
expression: parse_manifest_error(&duplicate_resource)?
---
InvalidManifest {
    reason: "duplicate resource `redis`",
}
