crates/resources/tests/snapshots/manifest_foundation__manifest_rejects_duplicate_tracks_and_artifacts-2.snap
---
source: crates/resources/tests/manifest_foundation.rs
assertion_line: 145
expression: parse_manifest_error(&duplicate_artifact)?
---
InvalidManifest {
    reason: "duplicate artifact identity in resource `redis` track `7`",
}
